# zero-config-website

./: .gitignore  CHANGELOG.md  COMPREHENSIVE_SHIP_REVIEW.md  IMPLEMENTATION_GUIDE.md  README.md  STABLE_RELEASE_SUMMARY.md  UI_UX_IMPROVEMENTS.md
engine/: ARCHITECTURE.md  BUILD_INSTRUCTIONS.md  Cargo.toml  INSTALL_BUILD_TOOLS.md  README.md  install-build-tools.ps1
engine/src/: commands.rs  lib.rs  main.rs
engine/src/cli/: mod.rs
engine/src/cloud/: azurite.rs  gcp.rs  localstack.rs  mod.rs
engine/src/config/: mod.rs
engine/src/core/: mod.rs
engine/src/generators/: compose.rs  dockerfile.rs  envfile.rs  github_actions.rs  mod.rs
engine/src/health/: mod.rs
engine/src/orchestrator/: docker_client.rs  mod.rs  service_templates.rs
engine/src/runtime/: container_runtime.rs  detector.rs  mod.rs  version_manager.rs
engine/src/secrets/: mod.rs
engine/src/services/: mod.rs  mongodb.rs  postgres.rs  redis.rs
engine/src/validation/: mod.rs
engine/templates/: database.yml  default.yml  fullstack.yml  go.yml  microservices.yml  node.yml  python.yml  redis.yml  rust.yml
engine/ui/: CONFIGURATION_UI_IMPLEMENTATION.md  IMPLEMENTATION_COMPLETE.md  QUICK_START.md  README.md  TAURI_REVIEW_SUMMARY.md  TAURI_SETUP.md  VERIFICATION_CHECKLIST.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
engine/ui/src/: App.css  App.tsx  main.tsx  styles.css
engine/ui/src-tauri/: Cargo.toml  tauri.conf.json
engine/ui/src-tauri/capabilities/: default.json
engine/ui/src-tauri/src/: lib.rs  main.rs
engine/ui/src/components/: ErrorBoundary.tsx
(+66 files in other folders)
